--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@metaplex-foundation/mpl-token-metadata": "^2.13.0",
+    "@raydium-io/raydium-sdk-v2": "^0.2.23-alpha",
     "@solana/web3.js": "^1.98.4",
     "better-sqlite3": "^12.2.0",
     "sqlite": "^5.1.1",
