--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "@raydium-io/raydium-sdk-v2": "^0.2.23-alpha",
     "@solana/web3.js": "^1.98.4",
     "better-sqlite3": "^12.2.0",
+    "bn": "^1.0.5",
+    "decimal": "^0.0.2",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "@types/bn.js": "^5.2.0"
   }
 }
